# example_lora_training

./: .gitignore  README.md  images.md  test_lora.zsh  test_original.zsh  test_prompt.txt  train_lora.zsh
diffusers_lora_example/: README.md  pyproject.toml  test.py  train_dreambooth_lora.py  train_lora.sh
img_train/5_tk girl/: 10.txt  11.txt  12.txt  2.txt  7.txt
kohya-ss_lora_example/: README.md  pip-list.txt  test_lora.zsh  test_prompt.txt  train_lora.zsh
kohya-ss_lora_example/captions/: 1.txt  13.txt  3.txt  9.txt
kohya-ss_lora_example/img_train/5_Wikipe-tan, girl/: 14.txt  8.txt
kohya-ss_lora_example/img_train/5_tk girl/: 4.txt  6.txt
